# m6

./: LICENSE  Makefile  README.md  pyproject.toml
docs/: mkdocs.yaml
docs/source/: index.md
m6/: __init__.py
